# django-bs4

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: ci.yml  publish.yml
bs4/: bootstrap.py  components.py  exceptions.py  forms.py  models.py  renderers.py  tests.py  text.py  utils.py
bs4/templates/bs4/: messages.html
bs4/templatetags/: bs4.py
demo/: manage.py
demo/demo/: forms.py  settings.py  urls.py  views.py  wsgi.py
demo/demo/templates/demo/: base.html  form-control.html  form.html  index.html  navbar.html
docs/: conf.py  docs_settings.py  example_template.rst  index.rst  installation.rst  quickstart.rst  settings.rst  templates.rst  templatetags.rst
src/bs4/: bootstrap.py  components.py  exceptions.py  forms.py  renderers.py  text.py  utils.py
src/bs4/templates/bs4/: base.html
src/bs4/templatetags/: bs4.py
tests/: test_bs4.py
