[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-bs4"
dynamic = ["version"]
description = "Bootstrap 4 for Django"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rangertaha", email = "rangertaha@gmail.com" },
]
keywords = ["django", "bootstrap", "bootstrap4", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=5.2",
]

[project.urls]
Homepage = "https://github.com/rangertaha/django-bs4"
Source = "https://github.com/rangertaha/django-bs4"
Issues = "https://github.com/rangertaha/django-bs4/issues"

[tool.hatch.version]
path = "bs4/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bs4"]

[tool.hatch.build.targets.sdist]
include = [
    "/bs4",
    "/docs",
    "/AUTHORS.rst",
    "/HISTORY.rst",
    "/README.rst",
    "/LICENSE",
    "/runtests.py",
]

[tool.ruff]
target-version = "py310"
