[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-bs4"
dynamic = ["version"]
description = "Bootstrap 4 for Django"
readme = "README.rst"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rangertaha", email = "rangertaha@gmail.com" },
]
keywords = ["django", "bootstrap", "bootstrap4", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=5.2,<6.0",
]

[project.urls]
Homepage = "https://github.com/rangertaha/django-bs4"
Source = "https://github.com/rangertaha/django-bs4"
Issues = "https://github.com/rangertaha/django-bs4/issues"

[tool.hatch.version]
path = "src/bs4/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bs4"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/AUTHORS.rst",
    "/HISTORY.rst",
    "/README.rst",
    "/LICENSE",
    "/runtests.py",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
